--- a/.github/workflows/ingest_url.yml
+++ b/.github/workflows/ingest_url.yml
@@ -23,7 +23,7 @@ jobs:
       - run: pip install -r requirements.txt
       
       - name: Checkout Private Storage (Optional)
-        if: env.STORAGE_REPO != ''
+        if: secrets.STORAGE_REPO != ''
         uses: actions/checkout@v4
         with:
           repository: ${{ secrets.STORAGE_REPO }}
@@ -43,7 +43,7 @@ jobs:
           STORAGE_REPO: ${{ secrets.STORAGE_REPO }}
           
       - name: Commit to Private Storage
-        if: env.STORAGE_REPO != ''
+        if: secrets.STORAGE_REPO != ''
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           repository: storage
@@ -51,7 +51,7 @@ jobs:
           file_pattern: 'data/*'
           
       - name: Commit to Local Repo
-        if: env.STORAGE_REPO == ''
+        if: secrets.STORAGE_REPO == ''
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: "Auto: Ingested ${{ inputs.url }}"
