Implement email-based ingestion with sender allowlist for simple mobile sharing

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,24 @@ OPENAI_API_KEY=sk-...
 
 # Optional: Jina API key (for higher rate limits)
 # JINA_API_KEY=...
+
+# ============================================
+# Email Ingestion Configuration
+# ============================================
+# The email address to poll for article URLs
+AIRLOCK_EMAIL=your-airlock-inbox@gmail.com
+
+# App Password (NOT your regular password!)
+# - Gmail: https://myaccount.google.com/apppasswords
+# - iCloud: https://appleid.apple.com/account/manage (App-Specific Passwords)
+AIRLOCK_EMAIL_PASSWORD=xxxx-xxxx-xxxx-xxxx
+
+# Optional: IMAP server (auto-detected for Gmail, iCloud, Outlook)
+# AIRLOCK_IMAP_SERVER=imap.gmail.com
+
+# Optional: Folder to check (default: INBOX)
+# AIRLOCK_EMAIL_FOLDER=INBOX
+
+# Optional: Only process emails from these addresses (comma-separated)
+# If not set, all emails are processed (less secure)
+AIRLOCK_ALLOWED_SENDERS=your-personal-email@gmail.com
