Fix workflow syntax errors by using env variables for secrets in conditionals

--- a/.github/workflows/daily_workflow.yml
+++ b/.github/workflows/daily_workflow.yml
@@ -10,6 +10,8 @@ jobs:
   poll-sources:
     if: github.event.schedule == '0 8 * * *' || github.event_name == 'workflow_dispatch'
     runs-on: ubuntu-latest
+    env:
+      STORAGE_REPO: ${{ secrets.STORAGE_REPO }}
     permissions:
       contents: write
     steps:
@@ -22,7 +24,7 @@ jobs:
       - run: pip install -r requirements.txt
       
       - name: Checkout Private Storage (Optional)
-        if: ${{ secrets.STORAGE_REPO != '' }}
+        if: env.STORAGE_REPO != ''
         uses: actions/checkout@v4
         with:
           repository: ${{ secrets.STORAGE_REPO }}
@@ -61,7 +63,7 @@ jobs:
           STORAGE_REPO: ${{ secrets.STORAGE_REPO }}
           
       - name: Commit to Private Storage
-        if: secrets.STORAGE_REPO != ''
+        if: env.STORAGE_REPO != ''
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           repository: storage
@@ -69,7 +71,7 @@ jobs:
           file_pattern: 'data/*'
           
       - name: Commit to Local Repo
-        if: secrets.STORAGE_REPO == ''
+        if: env.STORAGE_REPO == ''
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: "Auto: Daily ingestion (email + RSS)"
@@ -78,6 +80,8 @@ jobs:
   bundle-weekly:
     if: github.event.schedule == '0 20 * * 5' || github.event_name == 'workflow_dispatch'
     runs-on: ubuntu-latest
+    env:
+      STORAGE_REPO: ${{ secrets.STORAGE_REPO }}
     permissions:
       contents: write
     steps:
@@ -90,7 +94,7 @@ jobs:
       - run: pip install -r requirements.txt
       
       - name: Checkout Private Storage (Optional)
-        if: secrets.STORAGE_REPO != ''
+        if: env.STORAGE_REPO != ''
         uses: actions/checkout@v4
         with:
           repository: ${{ secrets.STORAGE_REPO }}
@@ -109,7 +113,7 @@ jobs:
           STORAGE_REPO: ${{ secrets.STORAGE_REPO }}
         
       - name: Commit to Private Storage
-        if: secrets.STORAGE_REPO != ''
+        if: env.STORAGE_REPO != ''
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           repository: storage
@@ -117,7 +121,7 @@ jobs:
           file_pattern: 'Digests/*'
 
       - name: Commit to Local Repo
-        if: secrets.STORAGE_REPO == ''
+        if: env.STORAGE_REPO == ''
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: "Auto: Weekly digest bundle"
