--- a/.github/workflows/ingest_url.yml
+++ b/.github/workflows/ingest_url.yml
@@ -11,6 +11,8 @@ on:
 jobs:
   ingest-ad-hoc:
     runs-on: ubuntu-latest
+    env:
+      STORAGE_REPO: ${{ secrets.STORAGE_REPO }}
     permissions:
       contents: write
     steps:
@@ -23,7 +25,7 @@ jobs:
       - run: pip install -r requirements.txt
       
       - name: Checkout Private Storage (Optional)
-        if: secrets.STORAGE_REPO != ''
+        if: env.STORAGE_REPO != ''
         uses: actions/checkout@v4
         with:
           repository: ${{ secrets.STORAGE_REPO }}
@@ -43,7 +45,7 @@ jobs:
           STORAGE_REPO: ${{ secrets.STORAGE_REPO }}
           
       - name: Commit to Private Storage
-        if: secrets.STORAGE_REPO != ''
+        if: env.STORAGE_REPO != ''
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           repository: storage
@@ -51,7 +53,7 @@ jobs:
           file_pattern: 'data/*'
           
       - name: Commit to Local Repo
-        if: secrets.STORAGE_REPO == ''
+        if: env.STORAGE_REPO == ''
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: "Auto: Ingested ${{ inputs.url }}"
