Update: Sync latest features from private repo
- Added URL deduplication to email ingestion
- Updated to granular textbook-style categories
- Added privacy checks to all workflows
- Fixed concurrent workflow handling with --force-with-lease

--- a/.github/workflows/daily_workflow.yml
+++ b/.github/workflows/daily_workflow.yml
@@ -81,6 +81,7 @@ jobs:
           repository: storage
           commit_message: "Auto: Daily ingestion (email + RSS)"
           file_pattern: 'data/*'
+          push_options: '--force-with-lease'
           
       - name: Commit to Local Repo
         if: env.STORAGE_REPO == ''
@@ -143,6 +144,7 @@ jobs:
           repository: storage
           commit_message: "Auto: Weekly digest bundle"
           file_pattern: 'Digests/*'
+          push_options: '--force-with-lease'
 
       - name: Commit to Local Repo
         if: env.STORAGE_REPO == ''
